tests/ui/inner.stderr
error: Inner doc comments `//! ...` are not supported. Please use `/// ...`
 --> tests/ui/inner.rs:3:9
  |
3 |         //! this
  |         ^^^^^^^^

error: Inner doc comments `//! ...` are not supported. Please use `/// ...`
 --> tests/ui/inner.rs:5:9
  |
5 |         //! supported
  |         ^^^^^^^^^^^^^
