tests/ui/inner.rs
fn main() {
    docstr::docstr!(
        //! this
        //! is not
        //! supported
    );
}
